[package]
name = "conda-cage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "3", features = ["derive"] }
indicatif = "0.16.2"
console = { version = "0.15", default-features = false, features = [
    "ansi-parsing",
] }
regex = "1"

[dev-dependencies]
assert-json-diff = "2"
